5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1679_1880.log
== TEST (2019-04-30 17:20:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print()
elif(m==5):
	print()
elif(m==6):
	print()
elif(m==	
	  
	  
-- ERROR:
File "XXXX", line 20
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:22:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:14) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:20) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:23:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:23:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
m=int(input("Numero: "))
if((m<1)or(m>12)):
	print('numero de mes invalido')
elif(m==1):	
	print('janeiro')
elif(m==2):
	print('fevereiro')
elif(m==3):
	print('marco')
elif(m==4):
	print('abril')
elif(m==5):
	print('maio')
elif(m==6):
	print('junho')
elif(m==7):
	print('julho')
elif(m==8):
	print('agosto')
elif(m==9):
	print('setembro')
elif(m==10):
	print('outubro')
elif(m==11):
	print('novembro')
elif(m==12):
	print('dezembro')
	  
	  
-- EXECUTION TIME:
0.159186
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
